syntax = "proto3";

package leaderboard.pb;
option go_package = "leaderboard/api;pb";

message NothingResponse {}

message GetTopKRequest {
  string appId = 1;
  string leaderboardName = 2;
  int32 k = 3;
}

message GetMToNRequest {
  string appId = 1;
  string leaderboardName = 2;
  int32 m = 3;
  int32 n = 4;
}

message GetLeaderboardResponse {
  message Item {
    string id = 1;
    int32 score = 2;
  }
  repeated Item leaderboard = 1;
}

message GetIdRankRequest {
  string appId = 1;
  string leaderboardName = 2;
  string id = 3;
}

message GetIdRankResponse {
  int32 rank = 1;
}

message UpdateScoreRequest {
  string appId = 1;
  string leaderboardName = 2;
  string id = 3;
  int32 score = 4;
}

message NewLeaderboardRequest {
  string appId = 1;
  string leaderboardName = 2;
  enum MethodType {
    SUM = 0; // 将分数累积到总分
    BETTER = 1; // 取历史最高分
    LAST = 2; // 取最新分数
  }
  MethodType method = 3;
  enum OrderType {
    DESCENDING = 0; // high to low
    ASCENDING = 1; // low to high
  }
  OrderType order = 4;
  int32 resetTime = 5; // 榜单重置时间，0为不重置，单位待定
  int32 updateTime = 6; // 每隔多久更新榜单，单位待定
}

message LeaderboardRequest {
  string appId = 1;
  string leaderboardName = 2;
}

message GetLeaderBoardSizeResponse {
  int32 size = 1;
}
